sw: add a comment about WW8 non-existent fields, related: tdf#88697

Change-Id: Ie4da62a864233a7ab4587dd4e1b2f819a39e1441